<resources>
    <string name="app_name">Kedai Asik</string>
    <string name="signin">Masuk \nKedai Asik</string>
    <string name="signup">Daftar \nKedai Asik</string>
    <string name="signout">Keluar</string>
    <string name="cancle">Batal</string>

    <string name="name">Nama Lengkap</string>
    <string name="phone">Nomor Ponsel</string>
    <string name="email">Alamat Email</string>
    <string name="password">Kata Sandi</string>
    <string name="repassword">Ulangi Kata Sandi</string>

    <string name="intent_singin_from_signup">Sudah punya akun? Masuk sekarang</string>
    <string name="intent_singup_from_signin">Belum punya akun? Daftar sekarang</string>
    <string name="signup_btn">Daftar</string>
    <string name="signin_btn">Masuk</string>

    <string name="err_empty_form">Form harus di isi</string>
    <string name="err_pass_not_equals">Kata sandi tidak sama</string>
    <string name="err_bad_email">Format email salah</string>
    <string name="err_email_used">Email sudah digunakan orang lain</string>
    <string name="err_pass_length">Kata sandi minimal 6 karakter</string>
    <string name="err_wrong_pass">Password salah</string>
    <string name="err_wrong_email">Email tidak terdaftar</string>

    <string name="user_created">Berhasil mendaftarkan Akun</string>

    <string name="signout_dialog_title">Keluar?</string>
    <string name="signout_dialog_message">Akun anda akan dikeluarkan dari aplikasi</string>

    <string name="store">Toko Sendiri</string>
    <string name="register_store">Buat Kedai</string>
    <string name="store_name">Nama Kedai</string>
    <string name="opening_store">Jam Buka</string>
    <string name="closing_store">Jam Tutup</string>
    <string name="empty_view">Data Kosong</string>

    <string name="food">Makanan</string>
    <string name="drink">Minuman</string>

    <string name="menu_activity">Tambah Menu</string>
    <string name="menu_name">Nama Menu</string>
    <string name="menu_price">Harga Menu</string>
    <string name="menu_category">Kategori Menu</string>
    <string name="menu_image">Gambar Menu</string>
    <string name="save">Save Menu</string>
    <string name="delete">Delete menu</string>
    <string name="total_order">Total \n</string>
    <string name="total_first">Total \nRp 0</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="alamat_rumah">Alamat Rumah</string>
    <string name="total">Total :</string>
    <string name="ongkir">Ongkos Kirim : Rp 5.000</string>
    <string name="subtotal">Subtotal :</string>
    <string name="payment_gateway">Metode Pembayaran</string>
    <string name="transfer">Transfer via Bank</string>
    <string name="cod">Bayar ditempat</string>
    <string name="address_hint">Jalan Buahbatu Gg PGA Bandung</string>
    <string name="order_now">Pesan Sekarang</string>
    <string name="history">Riwayat Penjualan</string>
</resources>